[package]
name = "carrot-geyser-plugin"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agave-geyser-plugin-interface = "2.1.0"
solana-program = "2.1.0"
serde = "1.0.132"
serde_json = "1.0.132"
pulsar = "6.3.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
arrayref = "0.3.9"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
